--- a/PaintStripper/PaintStripperBP/manifest.json
+++ b/PaintStripper/PaintStripperBP/manifest.json
@@ -34,7 +34,7 @@
      },
      {
          "module_name": "@minecraft/server",
-         "version": "2.0.0-alpha"
+         "version": "2.0.0-beta"
      } 
     ]
    }
