--- a/PaintStripper/PaintStripperBP/manifest.json
+++ b/PaintStripper/PaintStripperBP/manifest.json
@@ -35,6 +35,10 @@
         {
             "module_name": "@minecraft/server",
             "version": "2.2.0-beta"
+        },
+        {
+            "module_name": "@minecraft/server-ui",
+            "version": "2.0.0"
         }
     ]
    }
