--- a/PaintStripper/PaintStripperBP/manifest.json
+++ b/PaintStripper/PaintStripperBP/manifest.json
@@ -1,10 +1,10 @@
 {
     "format_version": 2, 
     "header": { 
-        "description": "Behaviour pack for Paint Stripper addon v1.0.0 - alpha", 
-        "name": "PaintStripperBP", 
+        "description": "Behaviour pack for Magical Brewery addon v0.3 - alpha", 
+        "name": "Magical Brewery BP", 
         "uuid": "dbbbb4fb-bf6d-4551-871c-45862f31a014", 
-        "version": [ 1, 0, 0 ], 
+        "version": [ 0, 3, 0 ], 
         "min_engine_version": [ 1, 21, 10 ] 
     },
     "metadata":{
@@ -14,10 +14,10 @@
     }, 
     "modules": [ 
         { 
-            "description":"Behaviour pack for Paint Stripper addon v1.0.0 - alpha", 
+            "description":"Behaviour pack for Magical Brewery addon v0.3 - alpha", 
             "type": "data", 
             "uuid": "d6383502-c606-4c70-970c-a21086b9c843", 
-            "version": [ 1, 0, 0 ] 
+            "version": [ 0, 3, 0 ] 
         },
         {
             "uuid": "efc912b2-2809-4a28-ba04-e5b8c6ac7c7b",
@@ -30,7 +30,7 @@
     "dependencies": [ 
         { 
             "uuid": "b980ea2e-49a0-4098-89b6-6db625d2b05d", 
-            "version": [ 1, 0, 0 ] 
+            "version": [ 0, 3, 0 ] 
         },
         {
             "module_name": "@minecraft/server",
