--- a/PaintStripper/PaintStripperBP/feature_rules/biomes_alchemist_hole_feature.json
+++ b/PaintStripper/PaintStripperBP/feature_rules/biomes_alchemist_hole_feature.json
@@ -6,38 +6,30 @@
 			"places_feature": "magical_brewery:alchemist_hole_feature"
 		},
 		"conditions": {
-			"placement_pass": "after_surface_pass",
+			"placement_pass": "first_pass",
 			"minecraft:biome_filter": {
 				"any_of": [
                     {
                         "test": "has_biome_tag",
-                        "value": "taiga"
-                    },
-                    {
-                        "test": "has_biome_tag",
-                        "value": "meadow"
-                    },
-                    {
-                        "test": "has_biome_tag",
-                        "value": "plains"
+                        "value": "overworld"
                     }
 				]
 			}
 		},
 		"distribution": {
-			"iterations": 1,
+			"iterations": 3,
 			"x": {
 				"extent": [0, 16],
 				"distribution": "uniform"
 			},
-			"y": "q.heightmap(v.worldx, v.worldz) + -6",
+			"y": "q.heightmap(v.worldx, v.worldz) + -4",
 			"z": {
 				"extent": [0, 16],
 				"distribution": "uniform"
 			},
 			"scatter_chance": {
 				"numerator": 1,
-				"denominator": 40
+				"denominator": 4
 			}
 		}
 	}
