--- a/Magical Brewery/Magical Brewery - BP/manifest.json
+++ b/Magical Brewery/Magical Brewery - BP/manifest.json
@@ -34,7 +34,7 @@
         },
         {
             "module_name": "@minecraft/server",
-            "version": "2.3.0-beta"
+            "version": "beta"
         },
         {
             "module_name": "@minecraft/server-ui",
