--- a/Magical Brewery/Magical Brewery - RP/manifest.json
+++ b/Magical Brewery/Magical Brewery - RP/manifest.json
@@ -1,10 +1,10 @@
 {
     "format_version": 2,
     "header": {
-      "description": "Resource pack for Magical Brewery addon v0.3.5 - alpha", 
+      "description": "Resource pack for Magical Brewery addon v0.3.6 - alpha", 
       "name": "Magical Brewery RP",
       "uuid":"b980ea2e-49a0-4098-89b6-6db625d2b05d",
-      "version": [0, 3, 5],
+      "version": [0, 3, 6],
       "min_engine_version": [1, 21, 120]
      },
      "metadata": {
@@ -14,10 +14,13 @@
     },
     "modules": [
       {
-        "description": "Resource pack for Magical Brewery addon v0.3.5", 
+        "description": "Resource pack for Magical Brewery addon v0.3.6", 
         "type": "resources",
         "uuid": "80ef3ab1-361d-4dde-a17d-4c965c70f05f",
-        "version": [0, 3, 5]
+        "version": [0, 3, 6]
       }
+    ],
+    "capabilities": [
+      "pbr"
     ]
    }
