--- a/Magical Brewery/Magical Brewery - RP/manifest.json
+++ b/Magical Brewery/Magical Brewery - RP/manifest.json
@@ -1,10 +1,10 @@
 {
     "format_version": 2,
     "header": {
-      "description": "Resource pack for Magical Brewery addon v0.3.6 - alpha", 
-      "name": "Magical Brewery RP",
+      "description": "Resource pack for Magical Brewery addon v0.4 - alpha", 
+      "name": "Magical Brewery RP - v0.4",
       "uuid":"b980ea2e-49a0-4098-89b6-6db625d2b05d",
-      "version": [0, 3, 6],
+      "version": [0, 4, 0],
       "min_engine_version": [1, 21, 120]
      },
      "metadata": {
@@ -14,10 +14,10 @@
     },
     "modules": [
       {
-        "description": "Resource pack for Magical Brewery addon v0.3.6", 
+        "description": "Resource pack for Magical Brewery addon v0.4", 
         "type": "resources",
         "uuid": "80ef3ab1-361d-4dde-a17d-4c965c70f05f",
-        "version": [0, 3, 6]
+        "version": [0, 4, 0]
       }
     ],
     "capabilities": [
