addon bumped to stable api 2.4.0

--- a/Magical Brewery/Magical Brewery - BP/manifest.json
+++ b/Magical Brewery/Magical Brewery - BP/manifest.json
@@ -35,7 +35,7 @@
         },
         {
             "module_name": "@minecraft/server",
-            "version": "beta"
+            "version": "2.4.0"
         },
         {
             "module_name": "@minecraft/server-ui",
